# ConectaContact-Back-end

./: .env_sample  .gitignore  Dockerfile  README.md  app.py  credentials.json  credentials_not_use.json  pyproject.toml  requirements.txt
.github/workflows/: ci-pr.yml  deploy-gpc-cloud-run.yml
src/app/: __init__.py
src/app/config/: __init__.py
src/app/controllers/: __init__.py
src/app/controllers/contacts/: __init__.py
src/app/controllers/data/: __init__.py
src/app/controllers/login/: __init__.py
src/app/models/: __init__.py
src/app/routes/: __init__.py
src/app/schemas/: contacts_schema.json  user_login_schema.json
src/app/services/: __init__.py
src/app/utils/: __init__.py  client_secret_not_use.json
tests/: conftest.py  test_app.py
tests/contacts/: test_contacts.py
tests/login/: test_login.py
